# pyslang-mcp

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  REMOTE_DEPLOYMENT.md  evaluation.xml  pyproject.toml  pyslang-mcp-plan.md  server.json  top_10_issues.md
.github/workflows/: ci.yml  publish-mcp-registry.yml  release.yml
deploy/internal/: docker-compose.yml  pyslang-mcp.env.example
deploy/internal/systemd/: pyslang-mcp.service.example
docs/: architecture.md  ci-flow-plan.md  coverage-plan.md  internal-maas-quickstart.md  mcp-registry.md  pypi-launch-plan.md
docs/mcp_comparison/: index.html  results.json  run_mcp_comparison.py
examples/hdl/: README.md
scripts/: package_smoke_stdio.py  setup_internal_maas.py  validate_hdl_examples.py
src/pyslang_mcp/: __init__.py  __main__.py  analysis.py  auth.py  cache.py  hdl_examples.py  project_loader.py  schemas.py  server.py  types.py
tests/: test_analysis.py  test_auth.py  test_cache.py  test_hdl_smoke.py  test_main.py  test_mcp_stdio.py  test_project_loader.py  test_server.py
