[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pyslang-mcp"
version = "0.1.0a2"
description = "Read-only MCP server for compiler-backed Verilog and SystemVerilog analysis using pyslang."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Ariel Lapid" },
]
maintainers = [
  { name = "Ariel Lapid" },
]
requires-python = ">=3.11"
keywords = ["mcp", "model-context-protocol", "systemverilog", "verilog", "pyslang", "hdl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Topic :: Software Development :: Compilers",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27.1,<0.29",
  "mcp>=1.27,<2",
  "pydantic>=2.8,<3",
  "pyslang>=10,<11",
]

[project.urls]
Homepage = "https://github.com/ariklapid/pyslang-mcp"
Repository = "https://github.com/ariklapid/pyslang-mcp"
Issues = "https://github.com/ariklapid/pyslang-mcp/issues"
Documentation = "https://github.com/ariklapid/pyslang-mcp#readme"
Changelog = "https://github.com/ariklapid/pyslang-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "jsonschema>=4,<5",
  "pyright>=1.1.408,<2",
  "pytest>=9,<10",
  "pytest-cov>=6,<7",
  "ruff>=0.15,<1",
]

[project.scripts]
pyslang-mcp = "pyslang_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyslang_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingModuleSource = false
reportUnknownMemberType = false
